--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -131,6 +131,7 @@ img {
   grid-template-columns: repeat(4, minmax(max-content, 5.6rem));
   grid-template-rows: repeat(6, minmax(max-content, 5.6rem));
   gap: 1.6rem;
+  justify-content: center;
 }
 .cardsContainerOne div,
 .cardsContainerTwo div,
@@ -175,7 +176,7 @@ img {
 .card.reveal {
   transform: rotateY(-180deg);
 }
-.game-over {
+.pop-up {
   position: absolute;
   top: 0;
   right: 0;
@@ -185,7 +186,7 @@ img {
   place-items: center;
   backdrop-filter: blur(4px);
 }
-.game-over__container {
+.pop-up__container {
   padding: 2.4rem;
   display: grid;
   align-content: space-between;
@@ -194,21 +195,37 @@ img {
   height: 39rem;
   text-align: center;
   border-radius: 8px;
-  background-color: #000;
+  box-shadow: 0px 20px 20px rgba(15, 5, 26, 0.2);
 }
-.game-over__container img {
+.pop-up__container img {
   margin-top: 4rem;
   place-self: center;
   width: 8.8rem;
 }
-.game-over__container h3 {
+.pop-up__container h3 {
   font-family: 'Whyte', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 3.2rem;
   font-weight: 900;
   color: white;
 }
-.game-over__container a {
+.pop-up__container a {
   font-size: 1.6rem;
+}
+.game-over {
+  background-color: #030114;
+}
+.success-level {
+  background-color: #5948F2;
+}
+.success-level__btn,
+.winner__btn {
+  background: #030114;
+}
+.winner {
+  background: linear-gradient(180deg, #5948F2 0%, #BE92EE 100%);
+}
+.moves span {
+  color: #5948F2;
 }
 
 .first-level div:nth-of-type(1){
@@ -303,6 +320,103 @@ img {
   grid-column: 4 / 5;
   grid-row: 6 / 7;
 }
+.third-level div:nth-of-type(1) {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+.third-level div:nth-of-type(2) {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+.third-level div:nth-of-type(3) {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+.third-level div:nth-of-type(4) {
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+}
+.third-level div:nth-of-type(5) {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+.third-level div:nth-of-type(6) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+.third-level div:nth-of-type(7) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+.third-level div:nth-of-type(8) {
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+}
+.third-level div:nth-of-type(9) {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+.third-level div:nth-of-type(10) {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+.third-level div:nth-of-type(11) {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
+.third-level div:nth-of-type(12) {
+  grid-column: 4 / 5;
+  grid-row: 3 / 4;
+}
+.third-level div:nth-of-type(13) {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+}
+.third-level div:nth-of-type(14) {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+}
+.third-level div:nth-of-type(15) {
+  grid-column: 3 / 4;
+  grid-row: 4 / 5;
+}
+.third-level div:nth-of-type(16) {
+  grid-column: 4 / 5;
+  grid-row: 4 / 5;
+}
+.third-level div:nth-of-type(17) {
+  grid-column: 1 / 2;
+  grid-row: 5 / 6;
+}
+.third-level div:nth-of-type(18) {
+  grid-column: 2 / 3;
+  grid-row: 5 / 6;
+}
+.third-level div:nth-of-type(19) {
+  grid-column: 3 / 4;
+  grid-row: 5 / 6;
+}
+.third-level div:nth-of-type(20) {
+  grid-column: 4 / 5;
+  grid-row: 5 / 6;
+}
+.third-level div:nth-of-type(21) {
+  grid-column: 1 / 2;
+  grid-row: 6 / 7;
+}
+.third-level div:nth-of-type(22) {
+  grid-column: 2 / 3;
+  grid-row: 6 / 7;
+}
+.third-level div:nth-of-type(23) {
+  grid-column: 3 / 4;
+  grid-row: 6 / 7;
+}
+.third-level div:nth-of-type(24) {
+  grid-column: 4 / 5;
+  grid-row: 6 / 7;
+}
+
 
 @media (min-width: 426px) {
   .cardsContainerOne,
